--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,317 +1,5 @@
-<div class="zone1">
-    <div class="valign-wrapper">
-        <div class="valign">        
-            <div class="row">
-                <div class="col s12 hide-on-med-and-down">
-                    
-                    <h2 class="center-align col s12 white-text" translate="landing.main-title"></h2>
-                    
-                    <h5 class="center-align col s12 white-text" translate="landing.sub-title"></h5>
-                </div>
-                <div class="col s12 hide-on-large-only">
-                    
-                    <h4 class="center-align col s12 white-text" translate="landing.main-title"></h4>
-                    
-                    <h6 class="center-align col s12 white-text" translate="landing.sub-title"></h6>
-                </div>
-            </div>
-            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
-            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
-            <div class="row">
-                <div class="col s4 ">&nbsp;</div>
-                <div class="col s4 center accent-color">
-                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                       class="white-text">
-                        <h5 translate="landing.calltoaction"></h5>
-                    </a>
-                </div>
-                <div class="col s4 ">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div class="valign-wrapper col s12">
-                    <ul class="social-icons">
-                        <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
-                                class="fa fa-twitter-square fa-fw"></i><br/>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
-                                class="fa fa-facebook-square fa-fw"></i><br/>Facebook</a></li>
-                        <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
-                                class="fa fa-google-plus-square fa-fw"></i><br/>Google +</a></li>
-                        <li><a href="mailto:contact@qaobee.com" class="white-text"><i
-                                class="fa fa-envelope-square fa-fw"></i><br/>E-mail</a></li>
-                        <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="white-text"><i
-                                class="fa fa-fw fa-pencil-square"></i><br/>Newsletter</a></li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>  
-    </div>
-</div>
-
-<div class="home section" id="concept">
-    <!--   Icon Section   -->
-    <div class="row">
-        <div class="col s12">
-            <h3 class="center accent-text-color" translate="landing.concept.title"></h3>
-            <p>&nbsp;</p>
-            <ul class="icon-block">
-                <li>
-                    <i class="fa fa-fw fa-eye accent-text-color"></i>
-                    <h3 translate="landing.concept.capture" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.concept.capture" class="hide-on-med-and-up"></h5>
-                </li>
-                <li>
-                    <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
-                    <h3 translate="landing.concept.analyze" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.concept.analyze" class="hide-on-med-and-up"></h5>
-                </li>
-                <li>
-                    <i class="fa fa-fw fa-flag accent-text-color"></i>
-                    <h3 translate="landing.concept.progress" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.concept.progress" class="hide-on-med-and-up"></h5>
-                </li>
-            </ul>
-
-            
-        </div>
-    </div>
-</div>
-<div class="home section container">
-    <div class="row">
-        <div class="col s12 l8">
-            <div class="row">
-                <div class="col s4">
-                    <ul class="icon-conceptH">
-                        <li>
-                            <i class="fa fa-mobile fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align secondary-text-color">
-                    <h4 translate="pricing.offers.standard.appMob"></h4>
-                </div>
-
-                <div class="col s12 secondary-text-color"><hr></div>
-            </div>
-            <div class="row">    
-                <div class="col s12 left-align">    
-                    <span class="accent-text-color" translate="pricing.offers.standard.collectMob.intro"></span>
-                </div>
-            </div>
-            <div class="row">    
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-eye fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">    
-                    <h5 translate="pricing.offers.standard.collectMob.title"></h5>
-                    <span class="light-text-color" translate="pricing.offers.standard.collectMob.detail"></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-bar-chart fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">
-                    <h5 translate="pricing.offers.standard.statsMob.title"></h5>
-                    <span class="light-text-color" translate="pricing.offers.standard.statsMob.detail"></span>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 l4">    
-            <div class="row">
-                <div class="col s12 center-align">
-                    <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
-                          when-not-visible="animateElementOut"></div>-->
-                    <div class="outerdevice">
-                        <div class="device">
-                            <slide-wrapper arrows="false">
-                                <ul class="slide screenshot">
-                                    <li><img src="assets/images/handball/scshApp01.png" class="  responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshApp04.png" class="responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshApp05.png" class="responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshApp07.png" class="responsive-img"></li>
-                                </ul>
-                            </slide-wrapper>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    <div class="home section container dark-primary-color" id="download">
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 center-align">
-                <h3  translate="landing.area-3.item-0.title"></h3>
-                <p  class="center-align container"translate="landing.area-3.item-0.content"></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12 m6 center">
-                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
-                    <i class="fa fa-android fa-fw fa-5x accent-text-color"></i><br/>
-                    <span class="white-text" translate="landing.area-4.android"></span>
-                </a>
-            </div>
-            <div class="col s12 m6 center">
-                <span class="light-text-color">
-                    <i class="fa fa-apple fa-fw fa-5x light-text-color"></i><br/>
-                    <span translate="landing.area-4.iphone"></span>
-                </span>
-            </div>
-        </div>
-    </div>
-<div class="home section container">
-    <div class="row">
-        <div class="col s12 l8">
-            <div class="row"> 
-                <div class="col s4">
-                    <ul class="icon-conceptH">
-                        <li>
-                            <i class="fa fa-desktop fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align secondary-text-color">
-                    <h4 translate="pricing.offers.standard.appWeb.title"></h4>
-                </div>
-
-                <div class="col s12 secondary-text-color"><hr></div>
-            </div>
-
-            <div class="row">    
-                <div class="col s12 left-align">    
-                    <span class="accent-text-color" translate="pricing.offers.standard.appWeb.intro"></span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-user fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">
-                    <h5 translate="pricing.offers.standard.teamWeb.title"></h5>
-                    <span class="light-text-color" translate="pricing.offers.standard.teamWeb.detail"></span>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-bar-chart fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">
-                    <h5 translate="pricing.offers.standard.statsWeb.title"></h5>
-                    <span class="light-text-color" translate="pricing.offers.standard.statsWeb.detail"></span>
-                </div>
-            </div>    
-            
-            <div class="row"><div class="col s12">&nbsp;</div></div>
-        </div>
-        
-        <div class="col l4 s12">
-            <div class="row hide-on-small-only">&nbsp;</div>
-            <div class="row hide-on-small-only">&nbsp;</div>
-            <div class="laptop">
-                <div class="upper">
-                    <slide-wrapper arrows="false">
-                        <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/scshWeb08.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshWeb03.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshWeb04.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshWeb06.png" class="responsive-img"></li>
-                        </ul>
-                    </slide-wrapper>
-                </div>
-                <div class="lower"></div>
-            </div>
-        </div>
-        <div class="row"><div class="col s12">&nbsp;</div></div>
-    </div>
-    <div class="row">
-        
-        <div class="col s12 l8">
-            <div class="row"> 
-                <div class="col s4">
-                    <ul class="icon-conceptH">
-                        <li>
-                            <i class="fa fa-users fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align secondary-text-color">
-                    <h4 translate="pricing.offers.standard.shareWeb.title"></h4>
-                </div>
-
-                <div class="col s12 secondary-text-color"><hr></div>
-            </div>
-            
-            <div class="row">    
-                <div class="col s12 left-align">    
-                    <span class="accent-text-color" translate="pricing.offers.standard.shareWeb.intro"></span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-share-alt fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">
-                    <h5 translate="pricing.offers.standard.shareWeb.detail"></h5>
-            <span class="light-text-color" translate="pricing.offers.standard.shareWeb.detail2"></span>
-                </div>
-            </div>
-            
-        </div>
-        
-        <div class="col l4 s12">
-            <div class="row hide-on-small-only">&nbsp;</div>
-            
-            <div class="row hide-on-small-only">&nbsp;</div>
-            <img src="assets/images/handball/scshWeb01.png" class="responsive-img">
-        </div>
-        
-    </div>
-</div>
-
-<div class="home section center-align dark-primary-color" id="contact">
-    <div class="row">
-        <h4 class="white-text" translate="landing.connect"></h4>
-        <div class="center col s12">
-            <ul class="social-icons">
-                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
-                        class="fa fa-twitter-square fa-fw"></i><br/><span class="white-text">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"><i
-                        class="fa fa-facebook-square fa-fw"></i><br/><span class="white-text">Facebook</span></a></li>
-                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color"><i
-                        class="fa fa-google-plus-square fa-fw"></i><br/><span class="white-text">Google +</span></a></li>
-                <li><a href="mailto:contact@qaobee.com" class="accent-text-color"><i
-                        class="fa fa-envelope-square fa-fw"></i><br/><span class="white-text">E-mail</span></a></li>
-                <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color"><i
-                        class="fa fa-fw fa-pencil-square"></i><br/><span class="white-text">Newsletter</span></a></li>
-            </ul>
-
-        </div>
-    </div>
-</div>
+<span id="top">z</span>
+<span ng-repeat="p in parts track by $index" ng-include="'app/modules/public/parts/'+p+'.html'"></span>
+<a ng-if="toTop" class="toTop fade" href="javascript:void(0)" ng-click="gotoAnchor('top')">
+    <i class="fa fa-chevron-up fa-fw"></i>
+</a>
