QHBWEB-20 : Gérer le contenu de la page home

--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,4 +1,4 @@
-<span id="top">z</span>
+<span id="top"></span>
 <span ng-repeat="p in parts track by $index" ng-include="'app/modules/public/parts/'+p+'.html'"></span>
 <a ng-if="toTop" class="toTop fade" href="javascript:void(0)" ng-click="gotoAnchor('top')">
     <i class="fa fa-chevron-up fa-fw"></i>
