--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,23 +1,23 @@
-<div class="home section container">
+<div class="home section container" id="collect">
     <div class="row">
         <div class="col s12 l8">
-            <div class="row">
-                <div class="col m2 s4 icon-conceptH">
-                    <i class="fa fa-mobile fa-fw fa-4x white-text"></i>
-                </div>
-                <div class="col m10 s8 secondary-text-color">
-                    <h4 translate="pricing.offers.standard.appMob"></h4>
-                </div>
-                <div class="col s12 secondary-text-color">
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 left-align">
-                    <span class="accent-text-color" translate="pricing.offers.standard.collectMob.intro"></span>
-                </div>
-            </div>
             <ul class="collapsible" data-collapsible="accordion" watch>
+                <li>
+                    <div class="collapsible-header">
+                        <div class="row">
+                            <div class="col m2 s4 icon-conceptH">
+                                <i class="fa fa-mobile fa-fw fa-4x white-text"></i>
+                            </div>
+                            <div class="col m10 s8 left-align secondary-text-color">
+                                <h5 translate="pricing.offers.standard.appMob"></h5>
+                                <a href="javascript:void(0)" translate="commons.buttons.read-more" class="right"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collapsible-body">
+                        <p class="light-text-color" translate="pricing.offers.standard.collectMob.intro"></p>
+                    </div>
+                </li>
                 <li>
                     <div class="collapsible-header">
                         <div class="row">
