--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -12,35 +12,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s4 hide-on-med-and-down">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div class="col s4 hide-on-med-and-down">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div class="col s4 ">&nbsp;</div>
-                <div class="col s4 center accent-color">
-                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                       class="white-text">
-                        <h5 translate="landing.calltoaction"></h5>
+                <div class="col s4 offset-s4 center">
+                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank">
+                        <img src="assets/images/google-play.png" class="responsive-img">
                     </a>
-                </div>
-                <div class="col s4 ">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div class="valign-wrapper col s12 center">
-                    <ul class="social-icons">
-                        <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
-                                class="fa fa-twitter-square fa-fw"></i><br/>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
-                                class="fa fa-facebook-square fa-fw"></i><br/>Facebook</a></li>
-                        <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
-                                class="fa fa-google-plus-square fa-fw"></i><br/>Google +</a></li>
-                        <li><a href="mailto:contact@qaobee.com" class="white-text"><i
-                                class="fa fa-envelope-square fa-fw"></i><br/>E-mail</a></li>
-                        <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="white-text"><i
-                                class="fa fa-fw fa-pencil-square"></i><br/>Newsletter</a></li>
-                    </ul>
                 </div>
             </div>
             <div class="outter-arrow waves-effect waves-light">
