--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,4 +1,4 @@
-<div class="home section container">
+<div class="home section container" id="progress">
     <div class="laptop hide-on-med-and-down">
         <div class="upper white-text">
             <slide-wrapper arrows="false">
