--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -1,24 +1,23 @@
 <div class="home section container" id="collaborate">
     <div class="row">
         <div class="col s12 l8">
-            <div class="row">
-                <div class="col s4 m2 icon-conceptH">
-                    <i class="fa fa-users fa-fw fa-4x white-text"></i>
-                </div>
-                <div class="col s8 m10 left-align secondary-text-color">
-                    <h4 translate="pricing.offers.standard.shareWeb.title"></h4>
-                </div>
-                <div class="col s12 secondary-text-color">
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 left-align">
-                    <span class="accent-text-color" translate="pricing.offers.standard.shareWeb.intro"></span>
-                </div>
-            </div>
-
             <ul class="collapsible" data-collapsible="accordion" watch>
+                <li>
+                    <div class="collapsible-header">
+                        <div class="row">
+                            <div class="col s4 m2 icon-conceptH">
+                                <i class="fa fa-users fa-fw fa-4x white-text"></i>
+                            </div>
+                            <div class="col s8 m10 left-align secondary-text-color">
+                                <h5 translate="pricing.offers.standard.shareWeb.title"></h5>
+                                <a href="javascript:void(0)" translate="commons.buttons.read-more" class="right"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collapsible-body">
+                        <p class="light-text-color" translate="pricing.offers.standard.shareWeb.intro"></p>
+                    </div>
+                </li>
                 <li>
                     <div class="collapsible-header">
                         <div class="row">
