--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -9,13 +9,13 @@
     <div class="row">
         <div class="col s12 m6 center">
             <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
-                <i class="fa fa-android fa-fw fa-5x accent-text-color"></i><br/>
+                <img src="assets/images/google-play.png" class="responsive-img"><br/>
                 <span class="white-text" translate="landing.area-4.android"></span>
             </a>
         </div>
         <div class="col s12 m6 center">
                 <span class="light-text-color">
-                    <i class="fa fa-apple fa-fw fa-5x light-text-color"></i><br/>
+                    <img src="assets/images/appstore.png" class="responsive-img"><br/>
                     <span translate="landing.area-4.iphone"></span>
                 </span>
         </div>
