--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,4 +1,5 @@
 <div class="home section container" id="progress">
+    <h1>Un site web</h1>
     <div class="laptop hide-on-med-and-down">
         <div class="upper white-text">
             <slide-wrapper arrows="false">
@@ -25,7 +26,6 @@
                 </ul>
             </slide-wrapper>
         </div>
-
         <div class="lower"></div>
     </div>
     <div class="hide-on-large-only">
