--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -3,18 +3,26 @@
         <h4 class="white-text" translate="landing.connect"></h4>
         <div class="center col s12">
             <ul class="social-icons">
-                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
-                        class="fa fa-twitter-square fa-fw"></i><br/><span class="white-text">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"><i
-                        class="fa fa-facebook-square fa-fw"></i><br/><span class="white-text">Facebook</span></a></li>
-                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color"><i
-                        class="fa fa-google-plus-square fa-fw"></i><br/><span class="white-text">Google +</span></a>
+                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color">
+                    <img src="assets/images/Twitter.png" class="responsive-img"><br/>
+                    <span class="white-text">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color">
+                    <img src="assets/images/facebook.png" class="responsive-img"><br/>
+                    <span class="white-text">Facebook</span></a></li>
+                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color">
+                    <img src="assets/images/GooglePlus.png" class="responsive-img"><br/>
+                    <span class="white-text">Google +</span></a>
                 </li>
-                <li><a href="mailto:contact@qaobee.com" class="accent-text-color"><i
-                        class="fa fa-envelope-square fa-fw"></i><br/><span class="white-text">E-mail</span></a></li>
-                <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color"><i
-                        class="fa fa-fw fa-pencil-square"></i><br/><span class="white-text">Newsletter</span></a></li>
+                <li><a href="mailto:contact@qaobee.com" class="accent-text-color">
+                    <img src="assets/images/Gmail.png" class="responsive-img"><br/>
+                    <span class="white-text">E-mail</span></a></li>
+                <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color">
+                    <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
+                    <span class="white-text">Newsletter</span></a></li>
             </ul>
         </div>
+    </div>
+    <div class="row">
+        <div class="col s12"></div>
     </div>
 </div>
