--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,4 +1,5 @@
 <div class="home section container" id="collect">
+    <h1>Une application mobile</h1>
     <div class="row">
         <div class="col s12 l8">
             <ul class="collapsible" data-collapsible="accordion" watch>
@@ -66,7 +67,6 @@
                                 </ul>
                             </slide-wrapper>
                         </div>
-
                     </div>
                 </div>
             </div>
