--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -8,7 +8,7 @@
                     <h5 class="center-align col s12 white-text flow-text" translate="landing.sub-title"></h5>
                 </div>
             </div>
-            <div class="play-ico">
+            <div class="play-ico stores">
                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
                         <img src="assets/images/google-play.png" class="responsive-img"> <br/>
                         <span class="white-text" translate="landing.area-4.android"></span>
