--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -7,13 +7,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s12 m6 center">
+        <div class="col s12 m6 center stores">
             <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
                 <img src="assets/images/google-play.png" class="responsive-img"><br/>
                 <span class="white-text" translate="landing.area-4.android"></span>
             </a>
         </div>
-        <div class="col s12 m6 center">
+        <div class="col s12 m6 center stores">
                 <span class="light-text-color">
                     <img src="assets/images/appstore.png" class="responsive-img"><br/>
                     <span translate="landing.area-4.iphone"></span>
