--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1132,10 +1132,10 @@ span.badge {
 }
 
 .trial-banner > div {
-    -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
-    -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
-    -o-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -o-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     filter: progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
 }
 
@@ -1222,15 +1222,6 @@ input[type=checkbox]:checked + .card-title .fa {
 
 .nav-top-menu > li.active {
     background-color: rgba(0, 0, 0, 0.1);
-}
-
-.nav-top-menu > li a::after {
-    content: ">";
-    position: absolute;
-    font-size: 20px;
-    top: 50%;
-    margin-top: -32px;
-    right: -5px;
 }
 
 .nav-top-menu > li:last-child a::after {
