--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -3,19 +3,22 @@
         <div class="valign">
             <div class="row">
                 <div class="col s12 home-title">
-                    <h2 class="center-align col s12 white-text hide-on-med-and-down" translate="landing.main-title"></h2>
+                    <h2 class="center-align col s12 white-text hide-on-med-and-down"
+                        translate="landing.main-title"></h2>
                     <h4 class="center-align col s12 white-text hide-on-large-only" translate="landing.main-title"></h4>
                     <h5 class="center-align col s12 white-text flow-text" translate="landing.sub-title"></h5>
                 </div>
             </div>
             <div class="play-ico stores">
-                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
-                        <img src="assets/images/google-play.png" class="responsive-img"> <br/>
-                        <span class="white-text" translate="landing.area-4.android"></span>
-                    </a>
+                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
+                   rel="noopener">
+                    <img src="assets/images/google-play.png" class="responsive-img"> <br/>
+                    <span class="white-text" translate="landing.area-4.android"></span>
+                </a>
             </div>
             <div class="outter-arrow waves-effect waves-light">
-                <a href="javascript:void(0)" class="bounce fa fa-fw fa-3x fa-arrow-down" ng-click="gotoAnchor('concept')"></a>
+                <a href="javascript:void(0)" class="bounce fa fa-fw fa-3x fa-arrow-down"
+                   ng-click="gotoAnchor('concept')"></a>
             </div>
         </div>
     </div>
