--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -3,13 +3,13 @@
         <h4 class="white-text" translate="landing.connect"></h4>
         <div class="center col s12">
             <ul class="social-icons">
-                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color">
+                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color" rel="noopener">
                     <img src="assets/images/Twitter.png" class="responsive-img"><br/>
                     <span class="white-text">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color">
+                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color" rel="noopener">
                     <img src="assets/images/facebook.png" class="responsive-img"><br/>
                     <span class="white-text">Facebook</span></a></li>
-                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color">
+                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color" rel="noopener">
                     <img src="assets/images/GooglePlus.png" class="responsive-img"><br/>
                     <span class="white-text">Google +</span></a>
                 </li>
