--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -8,7 +8,8 @@
     </div>
     <div class="row">
         <div class="col s12 m6 center stores">
-            <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
+            <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
+               rel="noopener">
                 <img src="assets/images/google-play.png" class="responsive-img"><br/>
                 <span class="white-text" translate="landing.area-4.android"></span>
             </a>
