--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1703,7 +1703,7 @@ p {
     padding-top: 1rem;
     margin: 10px;
     border-radius: 5%;
-    background-color: #78BE78;
+    background-color: #ea5350;
 }
 
 .icon-concept {
@@ -1719,7 +1719,7 @@ p {
     padding-top: 1rem;
     margin: 10px;
     border-radius: 5%;
-    background-color: #607d8b;
+    background-color: #37474F;
 }
 
 #download {
