--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,5 +1,5 @@
 <span id="top"></span>
 <span ng-repeat="p in parts track by $index" ng-include="'app/modules/public/parts/'+p+'.html'"></span>
-<a ng-if="toTop" class="toTop fade" href="javascript:void(0)" ng-click="gotoAnchor('top')">
+<a ng-if="toTop" class="toTop fade accent-color" href="javascript:void(0)" ng-click="gotoAnchor('top')">
     <i class="fa fa-chevron-up fa-fw"></i>
 </a>
