--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -1,17 +1,16 @@
 <div class="home section dark-primary-color" id="download">
-    <!--   Icon Section   -->
     <div class="row">
         <div class="col s12 center-align">
             <h3 translate="landing.area-3.item-0.title"></h3>
-            <p class="center-align container" translate="landing.area-3.item-0.content"></p>
         </div>
-    </div>
-    <div class="row">
+        <div class="col s12 center-align">
+            <h5 class="hide-on-small-only" translate="landing.area-3.item-0.content"></h5>
+        </div>
         <div class="col s12 m6 center stores">
             <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
                rel="noopener">
                 <img src="assets/images/google-play.png" class="responsive-img"><br/>
-                <span class="white-text" translate="landing.area-4.android"></span>
+                <span translate="landing.area-4.android"></span>
             </a>
         </div>
         <div class="col s12 m6 center stores">
