fixes QHBWEB-178 : Changer les icônes des stores par les vraies

--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -12,8 +12,7 @@
             <div class="play-ico stores">
                 <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
                    rel="noopener">
-                    <img src="assets/images/google-play.png" class="responsive-img"> <br/>
-                    <span class="white-text" translate="landing.area-4.android"></span>
+                    <img src="assets/images/googleplay.png" class="responsive-img"  alt="play store logo" />
                 </a>
             </div>
             <div class="outter-arrow waves-effect waves-light">
