--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -10,13 +10,12 @@
         <div class="col s12 m6 center stores">
             <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
                rel="noopener">
-                <img src="assets/images/google-play.png" class="responsive-img"><br/>
-                <span class="white-text" translate="landing.area-4.android"></span>
+                <img src="assets/images/googleplay.png" class="responsive-img" alt="play store logo" />
             </a>
         </div>
         <div class="col s12 m6 center stores">
                 <span class="light-text-color">
-                    <img src="assets/images/appstore.png" class="responsive-img"><br/>
+                    <img src="assets/images/appStore.svg" class="responsive-img" style="width: 12rem;" alt="appstore logo"/><br/>
                     <span translate="landing.area-4.iphone"></span>
                 </span>
         </div>
