Wording home et refactoring

--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -82,7 +82,7 @@
                                     <div class="card col s12 dark-primary-color">
                                         <div class="card-content">
                                             <span class="card-title">
-                                                <i class="fa fa-group fa-fw"></i>
+                                                <i class="fa fa-clock-o fa-fw"></i>
                                                 <b>{{'pricing.offers.standard.collectMob.detail.statusTitle' | translate}}</b>
                                             </span>
 
