--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -1,10 +1,10 @@
 <div class="home section dark-primary-color" id="download">
     <div class="row">
         <div class="col s12 center-align">
-            <h3 translate="landing.area-3.item-0.title"></h3>
+            <h3 translate="landing.area-4.title"></h3>
         </div>
         <div class="col s12 center-align">
-            <h5 class="hide-on-small-only" translate="landing.area-3.item-0.content"></h5>
+            <h5 class="hide-on-small-only" translate="landing.area-4.content"></h5>
         </div>
         <div class="col s12 m6 center stores">
             <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
