--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -1,51 +1,16 @@
-<div class="home section container" id="collaborate">
+<div class="home section dark-primary-color" id="download">
     <div class="row">
-        <div class="col s12 l8">
-            <ul class="collapsible" data-collapsible="accordion" watch>
-                <li>
-                    <div class="collapsible-header">
-                        <div class="row">
-                            <div class="col s4 m2 icon-conceptH">
-                                <i class="fa fa-users fa-fw fa-4x white-text"></i>
-                            </div>
-                            <div class="col s8 m10 left-align secondary-text-color">
-                                <h5 translate="pricing.offers.standard.shareWeb.title"></h5>
-                                <a href="javascript:void(0)" translate="commons.buttons.read-more" class="right"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="collapsible-body">
-                        <p class="light-text-color" translate="pricing.offers.standard.shareWeb.intro"></p>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <div class="row">
-                            <div class="col s4 m2 icon-concept">
-                                <i class="fa fa-share-alt fa-fw fa-4x white-text"></i>
-                            </div>
-                            <div class="col s8 m10 left-align">
-                                <h5 translate="pricing.offers.standard.shareWeb.detail"></h5>
-                                <a href="javascript:void(0)" translate="commons.buttons.read-more" class="right"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="collapsible-body">
-                        <p class="light-text-color" translate="pricing.offers.standard.shareWeb.detail2"></p>
-                    </div>
-                </li>
-            </ul>
-            <div class="row">
-                <div class="col s12">&nbsp;</div>
-            </div>
+        <div class="col s12 center-align">
+            <h3 translate="landing.area-6.title"></h3>
         </div>
-        <div class="col l4 s12">
-            <div class="row hide-on-small-only">&nbsp;</div>
-            <div class="row hide-on-small-only">&nbsp;</div>
-            <img src="assets/images/handball/scshWeb01.png" materialboxed class="materialboxed responsive-img">
+        <div class="col s12 center-align">
+            <h5 class="hide-on-small-only" translate="landing.area-6.content"></h5>
         </div>
-        <div class="row">
-            <div class="col s12">&nbsp;</div>
+        
+        <div class="col s12 center">
+                <a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color">
+                    <img src="assets/images/Livejournal.png" class="responsive-img"><br/>
+                    <span class="white-text">Newsletter</span></a>
         </div>
     </div>
 </div>
