bug fix mailinglist

--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -40,7 +40,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bullseye fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.collectMob.detail.shootTitle' | translate}}</b>
+                                                <b translate="pricing.offers.standard.collectMob.detail.shootTitle"></b>
                                             </span>
                                             <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
                                         </div>
@@ -50,7 +50,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-area-chart fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.collectMob.detail.attackTitle' | translate}}</b>
+                                                <b translate="pricing.offers.standard.collectMob.detail.attackTitle"></b>
                                             </span>
 
                                             <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
@@ -61,7 +61,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-pie-chart fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.collectMob.detail.defenseTitle' | translate}}</b>
+                                                <b translate="pricing.offers.standard.collectMob.detail.defenseTitle"></b>
                                             </span>
 
                                             <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
@@ -72,7 +72,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bolt fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.collectMob.detail.disciplineTitle' | translate}}</b>
+                                                <b translate="pricing.offers.standard.collectMob.detail.disciplineTitle"></b>
                                             </span>
 
                                             <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
@@ -83,7 +83,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-clock-o fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.collectMob.detail.statusTitle' | translate}}</b>
+                                                <b translate="pricing.offers.standard.collectMob.detail.statusTitle"></b>
                                             </span>
 
                                             <p translate="pricing.offers.standard.collectMob.detail.status"></p>
