--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -41,7 +41,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bullseye fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.appWeb.title' | translate}}</b>
+                                                <b translate="pricing.offers.standard.appWeb.title"></b>
                                             </span>
                                             <p translate="pricing.offers.standard.appWeb.intro"></p>
                                         </div>
@@ -52,7 +52,7 @@
                                         <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-pie-chart fa-fw"></i>
-                                                <b>{{'pricing.offers.standard.statsWeb.title' | translate}}</b>
+                                                <b translate="pricing.offers.standard.statsWeb.title"></b>
                                             </span>
 
                                             <p translate="pricing.offers.standard.statsWeb.detail"></p>
